--- a/src/style.scss
+++ b/src/style.scss
@@ -30,11 +30,50 @@ header {
         text-transform: uppercase;
     }
 }
-.cv-container {
-    width: 21cm;
-    height: 29.7cm;
-    background-color: #eef1ef;
+main {
+    display: flex;
+    justify-content: space-between;
+    max-width: 1800px;
     margin: 16px auto;
+    .form-container {
+        width: 21cm !important;
+        height: 29.7cm !important;
+        background-color: #eef1ef;
+        box-shadow: rgb(0 0 0 / 35%) 0px 5px 15px;
+        padding: 32px;
+        color: #343b48;
+        border-radius: 4px;
+        input,textarea {
+            border-radius: 8px;
+            border: transparent;
+            margin: 6px 0;
+            padding: 8px 16px;
+            font-size: 1.1rem;
+            background-color: #FFFF;
+            &:focus {
+                outline: 1px solid #023047;
+            }
+        }
+        textarea {
+            resize: none;
+
+        }
+        .info {
+            display: flex;
+            flex-direction: column;
+            margin: 20px 0;
+        }
+    }
+}
+@media (max-width: 1799px) {
+    main {
+        flex-direction: column;
+    }
+}
+.cv-container {
+    width: 21cm !important;
+    height: 29.7cm !important;
+    background-color: #eef1ef;
     box-shadow: rgb(0 0 0 / 35%) 0px 5px 15px;
     color: #343b48;
     display: flex;
